[package]
name = "code-search"
version = "0.0.2"
license = "MIT"
readme = "README.md"
edition = "2021"
repository = "https://github.com/feint123/code-search"
homepage = "https://github.com/feint123"
description = "A command-line code search tool."
keywords = ["grep", "ast", "search", "command-line"]
categories = ["command-line-utilities"]

[[bin]]
name = "code-search"
path = "src/main.rs"

[dependencies]
clap = "4.5.15"
colored = "2.1.0"
tree-sitter = "0.22.6"
tree-sitter-rust = "0.21.2"
tree-sitter-java = "0.21.0"
tree-sitter-python = "0.21.0"
tree-sitter-c = "0.21.4"
tree-sitter-cpp = "0.22.3"
tree-sitter-javascript = "0.21.4"
tree-sitter-go = "0.21.2"
tree-sitter-c-sharp = "0.21.3"
prettytable = "0.10.0"
indicatif = "0.17.8"
regex = "1.10.6"
